Fix alignment errors in Headline section of home page

--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ header {
 }
 
 .headline-section {
-  padding: 7rem 1rem;
+  padding: 9rem 1rem;
 }
 
 .headline-section-about {
@@ -83,6 +83,7 @@ h1 {
 
 .main-paragraph {
   line-height: 25px;
+  margin: 2rem 0rem;
   padding: 1rem;
   background-color: #f8f8f8;
   color: black;
@@ -94,7 +95,8 @@ h1 {
 }
 
 .about-main-paragraph {
-  margin: 1rem 0 2rem 2rem;
+  margin: 2rem 0 4rem 0rem;
+  background-color: white;
 }
 
 #bold-text {
@@ -636,7 +638,7 @@ footer {
   }
 
   .about-main-paragraph {
-    width: 80%;
+    width: 70%;
     margin-left: 0;
   }
 
